--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,7 +2,9 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
   <header class="main-header">
@@ -40,52 +42,52 @@
     </nav>
   </header>
   <main class="catalog-container">
-    <header class="catalog__header">
+    <header class="catalog-container__header">
       <h1 class="visually-hiden">Седона</h1>
       <img src="../source/img/SEDONA.svg" alt="" style="background-image: url('../source/img/back-desktop.jpg');">
     </header>
-    <section class="catalog__cards">
-      <h2 class="catalog__cards-title">Фото и видео</h2>
-      <p class="catalog__cards-description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-      <ul class="catalog__list">
-        <li class="catalog__item-card">
-          <img class="catalog__image" src="../source/img/photo-1-mobile.jpg" width="280" height="280" alt="Дорога на фоне рассвета. Машина, едущая в начале дороги, с включенными фарами">
-          <h3 class="card-title">Неродные просторы</h3>
-          <p class="card-text">Автор фото: Борис</p>
-          <button class="card__favorite" type="button">
+    <section class="cards">
+      <h2 class="cards__title">Фото и видео</h2>
+      <p class="cards__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+      <ul class="cards__list">
+        <li class="cards__item">
+          <img class="cards__image" src="../source/img/photo-1-mobile.jpg" width="280" height="280" alt="Дорога на фоне рассвета. Машина, едущая в начале дороги, с включенными фарами">
+          <h3 class="cards__title-card">Неродные просторы</h3>
+          <p class="cards__author-name">Автор фото: Борис</p>
+          <button class="cards__favorite" type="button">
             <img src="../source/img/like-icon.svg" alt="">
           1350</button>
         </li>
-        <li class="catalog__item-card">
-          <img class="catalog__image" src="../source/img/photo-2-mobile.jpg" width="280" height="280" alt="Цветущий кактус желтыми цветами на фоне красных гор">
-          <h3 class="card-title">Местная растительность</h3>
-          <p class="card-text">Автор фото: Сергей</p>
-          <button class="card__favorite" type="button">
+        <li class="cards__item">
+          <img class="cards__image" src="../source/img/photo-2-mobile.jpg" width="280" height="280" alt="Цветущий кактус желтыми цветами на фоне красных гор">
+          <h3 class="cards__title-card">Местная растительность</h3>
+          <p class="cards__author-name">Автор фото: Сергей</p>
+          <button class="cards__favorite" type="button">
             <img src="../source/img/like-icon.svg" alt="">
           143</button>
         </li>
-        <li class="catalog__item-card">
-          <img class="catalog__image" src="../source/img/photo-3-mobile.jpg" width="280" height="280" alt="Дорога вдоль деретьев">
-          <h3 class="card-title">Дорога на север</h3>
-          <p class="card-text">Автор фото: Петр</p>
-          <button class="card__favorite" type="button">
+        <li class="cards__item">
+          <img class="cards__image" src="../source/img/photo-3-mobile.jpg" width="280" height="280" alt="Дорога вдоль деретьев">
+          <h3 class="cards__title-card">Дорога на север</h3>
+          <p class="cards__author-name">Автор фото: Петр</p>
+          <button class="cards__favorite" type="button">
             <img src="../source/img/like-icon.svg" alt="">
           96</button>
         </li>
-        <li class="catalog__item-card">
-          <img class="catalog__image" src="../source/img/photo-4-desktop1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
-          <h3 class="card-title">Мост дьявола</h3>
-          <p class="card-text">Автор фото: Антон</p>
-          <button class="card__favorite" type="button">
+        <li class="cards__item">
+          <img class="cards__image" src="../source/img/photo-4-desktop1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
+          <h3 class="cards__title-card">Мост дьявола</h3>
+          <p class="cards__author-name">Автор фото: Антон</p>
+          <button class="cards__favorite" type="button">
             <img src="../source/img/like-icon.svg" alt="">
           254</button>
         </li>
       </ul>
     </section>
-    <section class="catalog__video">
-      <h2 class="catalog__video-title">Все еще сомневаетесь?</h2>
-      <p class="catalog__video-description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-      <video class="catalog__video-player" width="280" height="177" controls poster="../source/img/video-desktop1.jpg">
+    <section class="video">
+      <h2 class="video__title">Все еще сомневаетесь?</h2>
+      <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+      <video class="video__player" width="280" height="177" controls poster="../source/img/video-desktop1.jpg">
         <source src="../source/img/video-desktop1.webm" type="video/webm">
         <source src="../source/img/video-desktop1.ogv" type="video/ogg">
         <source src="../source/img/video-desktop1.mp4" type="video/mp4">
@@ -99,17 +101,17 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__link--vkontakte-image" src="../source/img/vk.svg" width="48" height="48" alt="">
+              <img class="social__image" src="../source/img/vk.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__link--youtube-image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
+              <img class="social__image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__link--telegram-image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
+              <img class="social__image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
             </a>
           </li>
         </ul>
