--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,9 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
   <header class="main-header">
@@ -40,8 +42,10 @@
     </nav>
   </header>
   <main class="index-container">
-    <h1 class="visually-hidden">Седона</h1>
-    <img class="main-header__text" src="../source/img/text-index.svg" width="282" height="214" alt="" style="background-image: url('../source/img/back-mobile.jpg.jpg');">
+    <div class="main-page">
+      <h1 class="visually-hidden">Седона</h1>
+      <img class="main-page__text-image" src="../source/img/text-index.svg" width="282" height="214" alt="">
+    </div>
     <section class="advantages">
       <header class="advantages__header">
         <h2 class="advantages__header-title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
@@ -110,17 +114,17 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__link--vkontakte-image" src="../source/img/vk.svg" width="48" height="48" alt="">
+              <img class="social__image" src="../source/img/vk.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__link--youtube-image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
+              <img class="social__image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__link--telegram-image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
+              <img class="social__image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
             </a>
           </li>
         </ul>
