--- a/source/index.html
+++ b/source/index.html
@@ -48,8 +48,8 @@
     </div>
     <section class="advantages">
       <header class="advantages__header">
-        <h2 class="advantages__header-title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
-        <p class="advantages__header-description">"Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!"</p>
+        <h2 class="advantages__header-title">СЕДОНА — небольшой городок в АРИЗОНЕ, зАСЛУЖИвающий большего!</h2>
+        <p class="advantages__header-description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </header>
       <div class="advantages__wrapper">
         <ul class="advantages__list">
