--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,10 +8,10 @@
 </head>
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-image" src="../source/img/logo.svg" width="185" height="96" alt="Логотип сайта Седона">
-    </a>
-    <nav class="main-navigation">
+    <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+      <a class="main-navigation__logo" href="index.html">
+        <img class="main-navigation__logo-image" src="../source/img/logo.svg" width="185" height="96" alt="Логотип сайта Седона">
+      </a>
       <button class="main-navigation__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -22,7 +22,7 @@
               ГЛАВНАЯ
             </a>
           </li>
-          <li class="site-list__item site-list__item--active">
+          <li class="site-list__item  site-list__item--active">
             <a href="catalog.html">
               ФОТО И ВИДЕО
             </a>
@@ -43,8 +43,8 @@
   </header>
   <main class="catalog-container">
     <header class="catalog-container__header">
-      <h1 class="visually-hiden">Седона</h1>
-      <img src="../source/img/SEDONA.svg" alt="" style="background-image: url('../source/img/back-desktop.jpg');">
+      <h1 class="visually-hidden">Седона</h1>
+      <img src="img/SEDONA.svg" width="229" height="39" alt="Название города Седона");">
     </header>
     <section class="cards">
       <h2 class="cards__title">Фото и видео</h2>
@@ -124,5 +124,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
