--- a/source/form.html
+++ b/source/form.html
@@ -8,10 +8,10 @@
 </head>
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-image" src="../source/img/logo.svg" width="185" height="96" alt="Логотип сайта Седона">
-    </a>
-    <nav class="main-navigation">
+    <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+      <a class="main-navigation__logo" href="index.html">
+        <img class="main-navigation__logo-image" src="../source/img/logo.svg" width="185" height="96" alt="Логотип сайта Седона">
+      </a>
       <button class="main-navigation__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -27,7 +27,7 @@
               ФОТО И ВИДЕО
             </a>
           </li>
-          <li class="site-list__item site-list__item--active">
+          <li class="site-list__item  site-list__item--active">
             <a href="form.html">
               ФОРМА ОТЗЫВА
             </a>
@@ -43,7 +43,7 @@
   </header>
   <main class="form-container">
     <header class="form-container__header">
-      <h1 class="visually-hiden">Седона</h1>
+      <h1 class="visually-hidden">Седона</h1>
       <img src="../source/img/SEDONA.svg" alt="">
     </header>
     <section class="reviews">
@@ -187,5 +187,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
