--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav class="main-navigation main-navigation--closed main-navigation--nojs">
       <a class="main-navigation__logo" href="index.html">
-        <img class="main-navigation__logo-image" src="../source/img/logo.svg" width="185" height="96" alt="Логотип сайта Седона">
+        <img class="main-navigation__logo-image" src="img/logo.svg" width="185" height="96" alt="Логотип сайта Седона">
       </a>
       <button class="main-navigation__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
@@ -44,56 +44,66 @@
   <main class="index-container">
     <div class="main-page">
       <h1 class="visually-hidden">Седона</h1>
-      <img class="main-page__text-image" src="../source/img/text-index.svg" width="282" height="214" alt="">
+      <img class="main-page__text-image" src="img/text-index.svg" width="282" height="214" alt="">
     </div>
     <section class="advantages">
       <header class="advantages__header">
-        <h2 class="advantages__header-title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+        <h2 class="advantages__header-title">СЕДОНА — НЕБОЛЬШОЙ<br> ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
         <p class="advantages__header-description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </header>
       <div class="advantages__wrapper">
         <ul class="advantages__list">
           <li class="advantages__item">
-            <h3 class="advantages__title">НАСТОЯЩИЙ ГОРОДОК</h3>
-            <p class="advantages__number">— №1 —</p>
-            <p class="advantages__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-            <img class="advantages__image-city" src="../source/img/photo-city1.jpg" width="520" height="260" alt="Здание бара на фоне гор. Видны три флага">
+            <div class="card">
+              <h3 class="advantages__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+              <p class="advantages__number">— №1 —</p>
+              <p class="advantages__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+            </div>
+            <img class="advantages__image-city" src="img/photo-city1.jpg" width="520" height="260" alt="Здание бара на фоне гор. Видны три флага">
           </li>
           <li class="advantages__item advantages__item--town">
-            <img class="advantages__image" src="../source/img/icon-house.svg" width="39" height="37" alt="Домик">
+            <img class="advantages__image" src="img/icon-house.svg" width="39" height="37" alt="Домик">
             <h3 class="advantages__title advantages__title--town">Жилье</h3>
             <p class="advantages__description advantages__description--town">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
           <li class="advantages__item advantages__item--town">
-            <img class="advantages__image" src="../source/img/icon-burger.svg" width="40" height="35" alt="Бургер">
+            <img class="advantages__image" src="img/icon-burger.svg" width="40" height="35" alt="Бургер">
             <h3 class="advantages__title advantages__title--town">Еда</h3>
             <p class="advantages__description advantages__description--town">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
           </li>
           <li class="advantages__item advantages__item--town">
-            <img class="advantages__image" src="../source/img/icon-gift.svg" width="32" height="38" alt="Подарок">
+            <img class="advantages__image" src="img/icon-gift.svg" width="32" height="38" alt="Подарок">
             <h3 class="advantages__title advantages__title--town">СУВЕНИРЫ</h3>
             <p class="advantages__description advantages__description--town">Не только китайского, но и местного производства!</p>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title">ТАМ ЕСТЬ Мост дьявола</h3>
-            <p class="advantages__number">— №2 —</p>
-            <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img class="advantages__image-bridge" src="../source/img/photo-bridge1.jpg" width="520" height="260" alt="Красные скалы">
+            <div class="card">
+              <h3 class="advantages__title">ТАМ ЕСТЬ Мост дьявола</h3>
+              <p class="advantages__number">— №2 —</p>
+              <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
+            <img class="advantages__image-bridge" src="img/photo-bridge1.jpg" width="520" height="260" alt="Красные скалы">
           </li>
           <li class="advantages__item advantages__item--canyon">
-            <h3 class="advantages__title advantages__title--canyon">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-            <p class="advantages__number">— №3 —</p>
-            <p class="advantages__description">ВСЕ интересные места находятся очень близко</p>
+            <div class="card">
+              <h3 class="advantages__title advantages__title--canyon">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+              <p class="advantages__number">— №3 —</p>
+              <p class="advantages__description">ВСЕ интересные места находятся очень близко</p>
+            </div>
           </li>
           <li class="advantages__item advantages__item--canyon">
-            <h3 class="advantages__title advantages__title--canyon">КРАСИВАЯ ДОРОГА</h3>
-            <p class="advantages__number">— №4 —</p>
-            <p class="advantages__description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+            <div class="card">
+              <h3 class="advantages__title advantages__title--canyon">КРАСИВАЯ ДОРОГА</h3>
+              <p class="advantages__number">— №4 —</p>
+              <p class="advantages__description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+            </div>
           </li>
           <li class="advantages__item advantages__item--canyon">
-            <h3 class="advantages__title advantages__title--canyon">МАЛО ТУРИСТОВ</h3>
-            <p class="advantages__number">— №5 —</p>
-            <p class="advantages__description">Большинство едет в гранд каньон и толпится там</p>
+            <div class="card">
+              <h3 class="advantages__title advantages__title--canyon">МАЛО ТУРИСТОВ</h3>
+              <p class="advantages__number">— №5 —</p>
+              <p class="advantages__description">Большинство едет в гранд каньон и толпится там</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -118,25 +128,43 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__image" src="../source/img/vk.svg" width="48" height="48" alt="">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="48" height="48"/>
+                <g clip-path="url(#clip0_38433_456)">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M35.45 17.948C35.616 17.402 35.45 17 34.655 17H32.03C31.362 17 31.054 17.347 30.887 17.73C30.887 17.73 29.552 20.926 27.661 23.002C27.049 23.604 26.771 23.795 26.437 23.795C26.27 23.795 26.019 23.604 26.019 23.057V17.948C26.019 17.292 25.835 17 25.279 17H21.151C20.734 17 20.483 17.304 20.483 17.593C20.483 18.214 21.429 18.358 21.526 20.106V23.904C21.526 24.737 21.373 24.888 21.039 24.888C20.149 24.888 17.984 21.677 16.699 18.003C16.45 17.288 16.198 17 15.527 17H12.9C12.15 17 12 17.347 12 17.73C12 18.412 12.89 21.8 16.145 26.281C18.315 29.341 21.37 31 24.153 31C25.822 31 26.028 30.632 26.028 29.997V27.684C26.028 26.947 26.186 26.8 26.715 26.8C27.105 26.8 27.772 26.992 29.33 28.467C31.11 30.216 31.403 31 32.405 31H35.03C35.78 31 36.156 30.632 35.94 29.904C35.702 29.18 34.852 28.129 33.725 26.882C33.113 26.172 32.195 25.407 31.916 25.024C31.527 24.533 31.638 24.314 31.916 23.877C31.916 23.877 35.116 19.451 35.449 17.948H35.45Z" fill="white"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_38433_456">
+                <rect width="24" height="24" transform="translate(12 12)"/>
+                </clipPath>
+                </defs>
+              </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="48" height="48"/>
+                <path d="M31.1813 17H16.8133C15.3062 17 14 18.3 14 19.8V28.1C14 29.7 15.3062 31 16.8133 31H31.1813C32.7889 31 33.9946 29.7 33.9946 28.2V19.8C34.095 18.3 32.7889 17 31.1813 17ZM21.0333 27.4V20.6L27.8656 24L21.0333 27.4Z" fill="white"/>
+              </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="48" height="48"/>
+                <path d="M34.4393 16.6223L31.2705 31.566C31.0313 32.6205 30.408 32.883 29.5223 32.3865L24.6938 28.8285L22.3643 31.0695C22.1063 31.3275 21.891 31.5428 21.3938 31.5428L21.741 26.6258L30.6893 18.54C31.0785 18.1935 30.6045 18.0008 30.0848 18.348L19.0223 25.314L14.2598 23.823C13.224 23.4998 13.2053 22.7873 14.4758 22.29L33.1035 15.1133C33.966 14.79 34.7205 15.3053 34.4393 16.623V16.6223Z" fill="white"/>
+              </svg>
             </a>
           </li>
         </ul>
       </div>
       <div class="main-footer__copyright copyright">
-        <h2 class="copyright__text">Разработано</h2>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="27" height="34" alt="">
+          <span class="copyright__text">Разработано:</span>
+          <svg width="27" height="35" viewBox="0 0 27 35" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z"/>
+          </svg>
         </a>
       </div>
     </div>
