--- a/source/form.html
+++ b/source/form.html
@@ -54,7 +54,7 @@
       <h2 class="reviews__title">Оставьте свой отзыв</h2>
       <p class="reviews__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       <form class="reviews__form" action="https://echo.htmlacademy.ru/" method="get">
-        <fieldset class="form">
+        <fieldset class="form form--name">
           <legend class="form__title">Представьтесь:</legend>
           <ul class="form__list">
             <li class="form__item">
@@ -77,7 +77,7 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form">
+        <fieldset class="form form--contact">
           <legend class="form__title">Контактная информация:</legend>
           <ul class="form__list">
             <li class="form__item">
@@ -100,7 +100,7 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form">
+        <fieldset class="form form--checked">
           <legend class="form__title">ВАше Общее впечатление:</legend>
           <ul class="form__radio">
             <li class="form__item form__item--control">
@@ -126,7 +126,7 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form">
+        <fieldset class="form form--checked">
           <legend class="form__title">посещенные достопримечательности:</legend>
           <ul class="form__checked">
             <li class="form__item form__item--control">
@@ -160,7 +160,7 @@
           </ul>
         </fieldset>
         <fieldset class="form">
-          <label class="form__title" for="emotions">Опишите свои эмоции:</label>
+          <legend class="form__title" for="emotions">Опишите свои эмоции:</legend>
           <textarea class="form__area" id="emotions" name="emotions" rows="6" required>Опишите подробно все свои восторги</textarea>
         </fieldset>
         <button class="button button-form" type="button">ОТПРАВИТЬ ОТЗЫВ</button>
