--- a/source/index.html
+++ b/source/index.html
@@ -91,13 +91,13 @@
               <img class="advantages__image" src="img/icon-gift.svg" width="32" height="38" alt="Подарок">
             </picture>
             <h3 class="advantages__title advantages__title--town">СУВЕНИРЫ</h3>
-            <p class="advantages__description advantages__description--town">Не только китайского, но и местного производства!</p>
+            <p class="advantages__description advantages__description--town">Не только китайского,<br> но и местного производства!</p>
           </li>
           <li class="advantages__item">
             <div class="card">
-              <h3 class="advantages__title">ТАМ ЕСТЬ Мост дьявола</h3>
+              <h3 class="advantages__title">ТАМ ЕСТЬ<br> Мост дьявола</h3>
               <p class="advantages__number">— №2 —</p>
-              <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <p class="advantages__description">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно</p>
             </div>
             <picture>
               <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop.jpg, img/photo-bridge-desktop@2x.jpg">
@@ -131,8 +131,8 @@
     </section>
     <section class="subscription">
       <h2 class="subscription__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-      <p class="subscription__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <button class="subscription__button" type="button">Найти Гостиницу</button>
+      <p class="subscription__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <button class="button subscription__button" type="button">Найти Гостиницу</button>
     </section>
     <section class="map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
