--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="../32.svg" type="image/svg+xml">
 </head>
 <body class="page__body">
   <header class="main-header">
@@ -140,11 +142,11 @@
         <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
       </header>
       <div class="video__box">
-      <video class="video__player" width="280" height="177" controls poster="img/video-mobile.jpg">
-        <source src="img/video-desktop.jpg" srcset="img/video-desktop@2x.jpg" type="video/mp4">
-        <source src="img/video-tablet.jpg" srcset="img/video-tablet@2x.jpg" type="video/mp4">
-        <source src="img/video-mobile.jpg" srcset="img/video-mobile@2x.jpg" type="video/mp4">
-      </video>
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/video-desktop.jpg, img/video-desktop@2x.jpg">
+          <source media="(min-width: 768px)" srcset="img/video-tablet.jpg, img/video-tablet@2x.jpg">
+          <img class="video__player" src="img/video-mobile.jpg" srcset="img/video-mobile@2x.jpg" width="280" height="177">
+        </picture>
       <button class="video__button" type="button">
         <img src="img/polygon.svg" width="48" height="58" alt="Стрелка посреди видео">
       </button>
