--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="../32.svg" type="image/svg+xml">
 </head>
 <body class="page__body">
   <header class="main-header">
